--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h2 class ="score">Score: </h2>
     <div class ="entireGame">
     <div class="icecreamCone">
-        <p class="banner"></p>
+        <h4 class="banner"></h4>
         <div class ="stem" ></div>
         <div class ="cherry"></div>
         <div class ="cream1" ></div>
