added a clue feature, changed functionality for letter reveal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1><span>Guess the word before you get </span>Scooped<i class="fas fa-ice-cream"></i></h1>
     <h2 class="chances">Chances: 7</h2>
     <h2 class ="score">Score: </h2>
+    
     <div class ="entireGame">
     <div class="icecreamCone">
         <h4 class="banner"></h4>
@@ -27,8 +28,10 @@
         <div class ="scoop2" ></div>
         <div class ="scoop3" ></div>
         <div class ="cone"></div>
+        <br></br>
     </div>
     <div class=playersContainer>
+    <h2 class ="clue"></h2>
     <h3>Enter Player Names:</h3>
     <form id="nameForm">
     <input id = "p1name" type="text" name="player1" placeholder="Player 1 Name"><br>
