--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 </button>
             </div>
             <div class="modal-body">
-                    Player 1 chooses a word for Player 2 to guess, and provides a clue.<br></br>
-                    Player 2 has 7 chances to guess the word, losing a topping for every incorrect guess.<br></br>
-                    Player 1 wins if Player 2 loses all their icecream.<br></br>
+                    Player 1 chooses a word for Player 2 to guess, and provides a clue.<br>
+                    Player 2 has 7 chances to guess the word, losing a topping for every incorrect guess.<br>
+                    Player 1 wins if Player 2 loses all their icecream.<br>
                     Player 2 wins if they guess the word right before they use up their 7 chances.
             </div>
             </div>
@@ -47,7 +47,7 @@
     <h2 class="chances">Chances: 7</h2>
     <div class ="entireGame">
     <div class="icecreamCone">
-        <br></br>
+        <br>
         <div class ="stem" ></div>
         <div class ="cherry"></div>
         <div class ="cream1" ></div>
@@ -56,10 +56,9 @@
         <div class ="scoop2" ></div>
         <div class ="scoop3" ></div>
         <div class ="cone"></div>
-        <br></br>
+        <br>
     </div>
     <div class=playersContainer>
-    <!-- <h2 id ="ins">Instructions:<br></br>Player 1 chooses a word for Player 2 to guess.<br></br> Player 2 has 7 chances to guess the word, losing a topping for every incorrect guess.</h2> -->
     <h2 class ="clue"></h2>
     <h4 class="banner"></h4>
     <h3>Enter Player Names:</h3>
