added feature to display incorrect guesses

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous" defer></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Sundae Game</title>
+    <title>Scooped</title>
 </head>
 <body>
     <header>
@@ -47,7 +47,7 @@
     <h2 class="chances">Chances: 7</h2>
     <div class ="entireGame">
     <div class="icecreamCone">
-        <br>
+        <h5 class = "incorrect"></h5>
         <div class ="stem" ></div>
         <div class ="cherry"></div>
         <div class ="cream1" ></div>
@@ -56,7 +56,6 @@
         <div class ="scoop2" ></div>
         <div class ="scoop3" ></div>
         <div class ="cone"></div>
-        <br>
     </div>
     <div class=playersContainer>
     <h2 class ="clue"></h2>
