--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div class ="entireGame">
     <div class="icecreamCone">
         <h5 class = "incorrect"></h5>
+        <br>
         <div class ="stem" ></div>
         <div class ="cherry"></div>
         <div class ="cream1" ></div>
@@ -82,6 +83,6 @@
     </div>
     </div>
     <script src="script.js"></script>
-    <footer>Made by Rasha Baig</footer>
+    <footer>Created by Rasha Baig</footer>
 </body>
 </html>
